--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,6 @@ dmypy.json
 # Docker stuff
 src/movies/db_config.py
 
-src/movies/movies.json
-
 src/movies/dataloader/sql_2.py
+
+src/movies/.DS_Store
