--- a/mypy.ini
+++ b/mypy.ini
@@ -20,3 +20,15 @@ ignore_missing_imports = True
 
 [mypy-seaborn.*]
 ignore_missing_imports = True
+
+[mypy-scrapy.*]
+ignore_missing_imports = True
+
+[mypy-pymongo.*]
+ignore_missing_imports = True
+
+[mypy-sqlalchemy.*]
+ignore_missing_imports = True
+
+[mypy-pyodbc.*]
+ignore_missing_imports = True
