--- a/src/movies/scrapy.cfg
+++ b/src/movies/scrapy.cfg
@@ -1,8 +1,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = webscrapping.settings
+default = webmovies.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = webscrapping
+project = webmovies
