--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 pandas==1.0.5
 numpy~=1.19.1
 Scrapy~=2.3.0
-setuptools~=49.2.0
 itemadapter~=0.1.0
 pyodbc~=4.0.30
 SQLAlchemy~=1.3.19
 pymongo~=3.11.0
+Flask~=1.1.2
+sklearn~=0.0
+scikit-learn~=0.23.2
+pytest~=6.0.1
+setuptools~=49.2.0
